traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:6: error: ';' expected but '=' found.
      T[gauche,cote] = posSuivante(gauche,cote)
                     ^TraversalZigZag:23: error: identifier expected but ',' found.
       return T[!gauche,!cote]
                       ^TraversalZigZag:24: error: ']' expected but '}' found.
  }
  ^TraversalZigZag:27: error: identifier expected but ',' found.
      return T[!gauche,cote]}
                      ^TraversalZigZag:27: error: ']' expected but '}' found.
      return T[!gauche,cote]}
                            ^